[tool.poetry]
name = "englishtelegrambot"
version = "0.1.0"
description = ""
authors = ["BohdanObruch <bodan1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "13.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
